--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
-/* design for our game */
+.popup {
+  padding-top: 300px;
+  text-align: center;
+  align-items: center;
+  z-index: 1;
+  background: grey 50%;
+}
+
+.game {
+  z-index: 0;
+}
 #instructions
 {
   display: inline-block;
@@ -22,12 +32,6 @@ header
       padding: 0;
       margin: 0;
 
-    }
-.popup {
-  text-align: center;
-  align-items: center;
-  z-index: 1;
-  background: fade(grey 50%);
 }
   
     button {
